# light_oci_manager

./: .gitignore  Dockerfile  README.en.md  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: audit.py  bot.py  config.py  confirmations.py  context.py  formatters.py  main.py  oci_client.py  resource_match.py  security.py  web.py
app/commands/: __init__.py  basic.py  instances.py  network.py  operations.py  quota.py  regions.py  volumes.py
docs/: matrix_implementation.md  tradeoffs.md
docs/design/: architecture.md
docs/specs/: 00_overview.md  dev_deployment.md  dev_oci_client.md  dev_security.md  dev_telegram_bot.md  integration_acceptance.md  oci-helper-lite-tg-spec.md
docs/specs/legacy/: oci-helper-lite-tg-spec.md
tests/: conftest.py  test_audit.py  test_commands_basic.py  test_commands_instances.py  test_commands_network.py  test_commands_operations.py  test_commands_quota.py  test_commands_regions.py  test_commands_volumes.py  test_config.py  test_confirmations.py  test_formatters.py  test_resource_match.py  test_security.py  test_web.py
tests/fakes/: oci_fake.py  telegram_fake.py
