[project]
name = "oci-helper-lite-tg"
version = "0.1.0"
description = "Lightweight Telegram-only daemon for managing Oracle Cloud Infrastructure instances."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "oci-helper-lite-tg contributors" },
]
dependencies = [
    "python-telegram-bot>=21,<22",
    "oci>=2.130",
    "PyYAML>=6.0.1",
    "aiohttp>=3.9.5",
]

[project.scripts]
oci-helper-lite-tg = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
